<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cim</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="top_title">消息</string>
    <string name="user_account">昵称</string>
    <string name="et_account_hint">QQ号/邮箱</string>
    <string name="et_password_hint">密码</string>
    <string name="login">登入</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register">新用户</string>
    <string name="app_change_user">注销用户</string>
    <string name="app_exit_user">退出</string>
    <string name="app_cancle">取消</string>
    <string name="tv_country">中国+86</string>
    <string name="et_phoneNumber_hint">请输入你的手机号码</string>
    <string name="title_phoneNumber">请填写手机号码</string>
    <string name="btn_next">下一步</string>
    <string name="tv_xieyi">我已阅读并同意</string>
    <string name="tv_xieyi_url">使用条款和隐私政策</string>
    <string name="back">返回</string>
    <string name="tv_tips_password">密码由6-16位数字,字母或符号组成,不能是9位一下纯数字组成</string>
    <string name="tv_tips_name">建议填写你的真实姓名,让你的朋友更容易人出你,此昵称以后可以随时修改</string>
    <string name="et_name_hint">昵称</string>
    <string name="register_complete">完成</string>
    <string name="title_register_info">设置密码和昵称</string>
    
    <string name="friend_group">好友分组</string> 
    
    <string name="control">管理</string>
    
    <string name="user_time">12:30</string>
    <string name="user_name">开心一刻</string>
    <string name="user_content">好好学习,天天向上</string>
    <string name="tv_loading">正加载,请稍后...</string>
    <string name="no_data">网络异常...</string>
    <string name="tv_call1">你通话过的联系人都会在这里出现</string>
    <string name="tv_call2">快和朋友开始语音通话吧</string>
    <string name="btn_call">找人聊聊</string>
    <string name="choose_constact">选择联系人</string>
    <string name="tv_friend">QQ好友</string>
    <string name="tv_phone">通讯录</string>
    <string name="tv_group">群组</string>
    <string name="tv_discuss">讨论组</string>
    <string name="recentchat">最近聊天</string>
    <string name="search">请输入关键字</string>
    
    <string name="tv_search">搜索</string>
    <string name="menu1">消息</string>
    <string name="menu2">好友</string>
    <string name="menu3">动态</string>
    
    <string name="group">分组</string>
    <string name="all">全部</string>
    
    <string name="cnews">消息</string>
    <string name="call">通话</string>
    
    <string name="pc_side">PC</string>
    <string name="terminal_side">终端</string>
    
    <string name="pop_chat">多人聊天</string>
    <string name="pop_sangzhao">分享</string>
    <string name="pop_camera">水印相机</string>
    <string name="pop_scan">扫一扫</string>
    
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    
    <string name="title1">短信1</string>
    <string name="title2">收藏2</string>
    <string name="title3">推荐3</string>
    <string name="title4">推荐4</string>
    <string name="title5">推荐5</string>
    <string name="title6">推荐6</string>
    <string name="title7">推荐7</string>
    
    <string name="local_plugin">本地插件</string>
    <string name="baidu_sring">百度</string>
    <string name="xinlang_string">新浪</string>
    <string name="tencent_string">腾讯</string>
    <string name="souhu_string">搜狐</string>
    <string name="fenghuang_string">凤凰</string>
    <string name="wangyi_string">网易</string>
    
    <string name="dynamic">动态</string>
    <string name="setting">设置</string>
    
    <string name="sendMessage">发送</string>
    
    <string name="userNameText">10002</string>
    <string name="password">123123</string>
    
    <string name="string_cim">你已获得CIM号码</string>
    <string name="tv_cim_number">525203053</string>
    <string name="tv_register_result">启用通讯录查找更多好友,直接发起CIM聊天,我已阅读并同意</string>
    <string name="register_success">进入CIM</string>
    <string name="tv_register_success">注册成功</string>
    <string name="tv_tiaokuan">服务声明</string>
    
    <string name="string_addFriend">添加朋友</string>
    
    <string name="string_user_info_name">用户名</string>
    
    <string name="string_user_info_signature">签名</string>
    
    <string name="string_add_friend_abs">强制添加好友</string>
    
    <string name="string_add_friend_sure">请求添加好友</string>
    
    <string name="string_delete_friend">删除好友</string>
    
    <string name="string_friend_detail_info">详细资料</string>
    
</resources>
