<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/menuTitle"
        android:layout_width="fill_parent"
        android:layout_height="20.0dip"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tileOne"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/menu1"
            android:textColor="#000000"
            android:textSize="10.0dip" />

        <TextView
            android:id="@+id/tileTwo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/menu2"
            android:textColor="#000000"
            android:textSize="10.0dip" />

        <TextView
            android:id="@+id/titleThree"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/menu3"
            android:textColor="#000000"
            android:textSize="10.0dip" />
    </LinearLayout>

    <ImageView
        android:id="@+id/pic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/a"
        android:contentDescription="@string/app_name" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:background="#000000"
        android:persistentDrawingCache="animation" />

</LinearLayout>