<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.example.cim.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.example.cim.view.CustomerScrollView
        android:layout_below="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:id="@+id/rl_localplugin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/ll_bg_d" >

                <ImageView
                    android:id="@+id/feeds"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/qq_leba_list_seek_folder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/feeds"
                    android:text="@string/local_plugin" />

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/qvip_pay_wallet_icon_arrow_right_normal" />

                <!-- <ImageView
                    android:id="@+id/newest_tips"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/arrow"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/kangyikun" /> -->
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_localplugin"
                android:layout_margin="10dp"
                android:background="@drawable/ll_bg_d"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_baidu"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" >

                    <ImageView
                        android:id="@+id/game"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/baidu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/game"
                        android:text="@string/baidu_sring" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/qvip_pay_wallet_icon_arrow_right_normal" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/devide_line" />

                <RelativeLayout
                    android:id="@+id/rl_xinlang"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" >

                    <ImageView
                        android:id="@+id/huodong"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/xinlang" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/huodong"
                        android:text="@string/xinlang_string" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/qvip_pay_wallet_icon_arrow_right_normal" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/devide_line" />

                <RelativeLayout
                    android:id="@+id/rl_tencent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" >

                    <ImageView
                        android:id="@+id/file"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/tencent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/file"
                        android:text="@string/tencent_string" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/qvip_pay_wallet_icon_arrow_right_normal" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/devide_line" />

                <RelativeLayout
                    android:id="@+id/rl_souhu"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" >

                    <ImageView
                        android:id="@+id/neighbour"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/souhu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/neighbour"
                        android:text="@string/souhu_string" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/qvip_pay_wallet_icon_arrow_right_normal" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/two"
                android:layout_margin="10dp"
                android:background="@drawable/ll_bg_d"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_fenghuang"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" >

                    <ImageView
                        android:id="@+id/myfeeds"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/fenghuang" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/myfeeds"
                        android:text="@string/fenghuang_string" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/qvip_pay_wallet_icon_arrow_right_normal" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/devide_line" />

                <RelativeLayout
                    android:id="@+id/rl_wangyi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" >

                    <ImageView
                        android:id="@+id/saosao"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/wangyi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/saosao"
                        android:text="@string/wangyi_string" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@drawable/qvip_pay_wallet_icon_arrow_right_normal" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </com.example.cim.view.CustomerScrollView>

</RelativeLayout>